@@ -1,3 +1,6 @@
+  02 May 2019;  <manuel@gentoo.org> -feedreader-2.3.0.ebuild:
+  net-news/feedreader: Remove obsolete ebuild.
+
 *feedreader-2.8.2 (18 Mar 2019)
 
   18 Mar 2019; Manuel Friedli <manuel@fritteli.ch> +feedreader-2.8.2.ebuild:
